--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "expo": "~49.0.0",
     "expo-app-loading": "^2.1.1",
     "expo-checkbox": "^2.4.0",
-    "expo-status-bar": "~1.4.4",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-linear-gradient": "^2.7.3",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
